--- a/index.html
+++ b/index.html
@@ -75,21 +75,36 @@
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
+	    <li data-target="#myCarousel" data-slide-to="3"></li>
+		  <li data-target="#myCarousel" data-slide-to="4"></li>
+		    <li data-target="#myCarousel" data-slide-to="5"></li>
 	
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="car4.jpg" alt="Los Angeles" style="width:100%;">
+        <img src="car4.jpg" alt="car" style="width:100%;">
       </div>
 
       <div class="item">
-        <img src="car2.jpg" alt="Chicago" style="width:100%;">
+        <img src="car2.jpg" alt="car" style="width:100%;">
+      </div>
+	  
+	   <div class="item">
+        <img src="13643.jpg" alt="car" style="width:100%;">
+      </div>
+	  
+	   <div class="item">
+        <img src="13648.jpg" alt="car" style="width:100%;">
+      </div>
+	  
+	   <div class="item">
+        <img src="115564.jpg" alt="car" style="width:100%;">
       </div>
     
       <div class="item">
-        <img src="car3.jpg" alt="New york" style="width:100%;">
+        <img src="car3.jpg" alt="car" style="width:100%;">
       </div>
     </div>
 	
@@ -150,7 +165,7 @@
   <div class="row">
     <div class="col-sm-4">
 	
-      <h3 align="center">SOCIAL MEDIA</h3>
+ <h3 align="center">SOCIAL MEDIA</h3>
 		<div class="center-block" align="center">
       <p><a href="#" class="fa fa-facebook"></a></p>
 	
