--- a/search.html
+++ b/search.html
@@ -26,7 +26,7 @@
 		
 	<style>
 		body{
-			background-color: #04ECD4 ;
+			background-color: #A7AFAE ;
 			box-shadow:0 5px 10px #000000;
 			color: #000000;
 			
