--- a/visit_us.html
+++ b/visit_us.html
@@ -73,7 +73,7 @@
 	  
 	
 
-<<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d918.8163217740396!2d80.66344199058742!3d7.01350704152042!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae3786f1ab5770b%3A0xcc56b019432be0a5!2sSamagi%20Ground!5e0!3m2!1sen!2slk!4v1585744597734!5m2!1sen!2slk" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d918.8163217740396!2d80.66344199058742!3d7.01350704152042!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae3786f1ab5770b%3A0xcc56b019432be0a5!2sSamagi%20Ground!5e0!3m2!1sen!2slk!4v1585744597734!5m2!1sen!2slk" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></iframe>
    
 	
 	
